[gd_scene load_steps=25 format=3 uid="uid://btwsnu1lwi4qw"]

[ext_resource type="Script" uid="uid://dxufikl6pufsa" path="res://Scripts/Enemy.gd" id="1_jcvw6"]
[ext_resource type="Texture2D" uid="uid://8niyel4sinrm" path="res://Assets/FreeOnlineAssets/Cute_Fantasy_Free/Enemies/Slime.png" id="2_x1rqp"]
[ext_resource type="PackedScene" uid="uid://bxt5q06ej56kg" path="res://Scenes/Enemies/hitbox.tscn" id="3_x1rqp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x1rqp"]
atlas = ExtResource("2_x1rqp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubio8"]
atlas = ExtResource("2_x1rqp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miwey"]
atlas = ExtResource("2_x1rqp")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8da7"]
atlas = ExtResource("2_x1rqp")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haj6g"]
atlas = ExtResource("2_x1rqp")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("2_x1rqp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("2_x1rqp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("2_x1rqp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("2_x1rqp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("2_x1rqp")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("2_x1rqp")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("2_x1rqp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("2_x1rqp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rku1e"]
atlas = ExtResource("2_x1rqp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfjv2"]
atlas = ExtResource("2_x1rqp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1phco"]
atlas = ExtResource("2_x1rqp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb51f"]
atlas = ExtResource("2_x1rqp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iifgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1rqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubio8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miwey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8da7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haj6g")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}],
"loop": false,
"name": &"Jumping",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rku1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfjv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1phco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb51f")
}],
"loop": true,
"name": &"Walking",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1f0kj"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f0kj"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1rqp"]
size = Vector2(16, 12)

[node name="Enemy" type="CharacterBody2D"]
unique_name_in_owner = true
z_index = 1
motion_mode = 1
script = ExtResource("1_jcvw6")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_iifgy")
animation = &"Walking"
autoplay = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_1f0kj")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_1f0kj")

[node name="Hitbox" parent="." instance=ExtResource("3_x1rqp")]

[node name="HitboxCollision" type="CollisionShape2D" parent="Hitbox"]
unique_name_in_owner = true
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_x1rqp")

[connection signal="animation_finished" from="EnemySprite" to="." method="_on_enemy_sprite_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
